# OpenGL-Assessment-Web---RnD-Intern

./: .gitignore  DIRECTORY_STRUCTURE.md  DOCUMENTATION_INDEX.md  QUICK_START.md  README.md  SETUP_CHECKLIST.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  VISUAL_GUIDE.md  build.gradle  settings.gradle
app/: .placeholder  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/edge/: MainActivity.kt  NativeBridge.kt
app/src/main/java/com/example/edge/camera/: CameraController.kt
app/src/main/java/com/example/edge/gl/: FrameRenderer.kt  Renderer.java
app/src/main/res/layout/: activity_main.xml
gl/: Renderer.java
gradle/wrapper/: gradle.properties
jni/: CMakeLists.txt
jni/src/: native_bridge.cpp  opencv_processor.cpp
web/: index.html  package.json  tsconfig.json
web/src/: main.ts
